# openAPI/openapi.oas3.yml
@@ -7,10 +7,10 @@ servers:
     - url: https://frontend.example.com
       description: Frontend Server
 paths:
-    /image-generation:
+    /generate:
         post:
-            summary: Resource path in storage
-            description: Post the resource path in storage to BE.
+            summary: Generate AI Drawing
+            description: Post id in storage to BE.
             tags:
                 - to BE
             requestBody:
@@ -20,12 +20,12 @@ paths:
                         schema:
                             type: object
                             properties:
-                                x:
-                                    type: integer
-                                    description: The x-coordinate
-                                y:
-                                    type: integer
-                                    description: The y-coordinate
+                                userId:
+                                    type: string
+                                    description: user id of the experience
+                                    example: "hogehogehoge"
+                            required:
+                                - userId
             responses:
                 "200":
                     description: Drawing saved successfully.
@@ -34,9 +34,9 @@ paths:
                             schema:
                                 type: object
                                 properties:
-                                    message:
+                                    url:
                                         type: string
-                                        example: "Drawing saved successfully."
+                                        example: "http://hogehoge"
                 "400":
                     description: Invalid request - the request could not be understood due to malformed syntax or invalid data.
                     content:
@@ -46,7 +46,7 @@ paths:
                                 properties:
                                     error:
                                         type: string
-                                        example: "Invalid input data: image path missing"
+                                        example: "Invalid input data: user id is missing"
                 default:
                     description: Unexpected error
                     content:
@@ -57,7 +57,7 @@ paths:
                                     error:
                                         type: string
                                         description: "A detailed error message."
-    /presigned-urls:
+    /init:
         get:
             summary: Get presigned urls
             description: Retrieve presigned URLs for both Human and AI drawings.
